<resources>
    <string name="account">账号</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="key_default">未填写</string>
    <string name="nickname">昵称</string>
    <string name="qr">名片</string>
    <string name="sign">签名</string>
    <string name="app_name">MwM</string>
    <string name="login">登录</string>
    <string name="hint_yhmc">账号名称(仅限字母和数字)</string>
    <string name="hint_yhmm">用户密码</string>
    <string name="hint_server">服务器地址</string>
    <string name="hint_old_mm">请输入密码</string>
    <string name="hint_new_mm">请输入新密码</string>
    <string name="hint_nickname">昵称(可不填写，默认使用账号名称)</string>
    <string name="repeat_yhmm">再次输入密码</string>
    <string name="action_voice">语音合成</string>
    <string name="action_settings">设置</string>
    <string name="empty"> </string>
    <string name="digits">0123456789qwertyuiopasdfghjklzxcvbnmQWERTYUIOPASDFGHJKLZXCVBNM_</string>
    <string name="forget_mm">忘记密码？</string>
    <string name="register">立即注册</string>
    <string name="title_activity_settings">Settings</string>
    <string name="about">关于我们</string>
    <string name="MwMWeather">MwM天气</string>
    <string name="local_save">保存到手机</string>
    <string name="feedback">问题反馈</string>
    <string name="hint_content">请输入遇见的问题或建议 ( 最多300字 )</string>
    <string name="submit">提交</string>
    <string name="ver">检查新版本</string>
    <string name="reset_mm">密码修改</string>
    <string name="ok">确定</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="refuse">拒绝</string>
    <string name="agree">同意</string>
    <string name="dialog_Title">温馨提示</string>
    <string name="account_switch">切换账号</string>
    <string name="Account_security">账号与安全</string>
    <string name="device_lock">设备锁</string>
    <!---->
    <string name="gallery_menu_finish">完成</string>

    <!-- 图库 -->
    <string name="album_title_activity_gallery">图片</string>
    <string name="album_all_image">所有图片</string>
    <string name="album_check_limit">你最多可以选择%1$d张图片</string>
    <string name="album_check_little">你没有选择照片</string>
    <string name="album_menu_finish">完成</string>
    <string name="album_check">选择</string>

    <string name="album_dialog_permission_failed">权限获取失败</string>
    <string name="album_permission_storage_failed_hint">获取读取相册权限失败，请在设置中授权后再使用。</string>
    <string name="album_permission_camera_failed_hint">获取相机权限失败，请在设置中授权后再使用。</string>
    <string name="album_dialog_sure">好的</string>

    <string name="title_dialog_hint">提示</string>
    <string name="cancel_select_photo_hint">用户取消了选择照片。</string>

    <!---->
    <string name="label_aspect_ratio">Aspect ratio</string>
    <string name="label_dynamic">Dynamic</string>
    <string name="label_image_source">Image source</string>
    <string name="label_square">Square</string>
    <string name="label_max_cropped_image_size">Max cropped image size</string>
    <string name="label_compression_settings">Compression settings</string>
    <string name="label_ui">UI</string>
    <string name="label_width">Width</string>
    <string name="label_height">Height</string>
    <string name="label_resize_image_to_max_size">Resize image to max size</string>
    <string name="label_hide_bottom_ui_controls">Hide bottom UI controls</string>
    <string name="label_freestyle_crop">Freestyle crop</string>
    <string name="label_select_picture">Select Picture</string>
    <string name="label_cancel">Cancel</string>
    <string name="label_ok">OK</string>

    <string name="notification_image_saved">Image saved</string>
    <string name="notification_image_saved_click_to_preview">Image saved. Click to preview.</string>

    <string name="menu_download">Download</string>

    <string name="button_pick_amp_crop"><![CDATA[Pick & Crop]]></string>
    <string name="button_crop_random_image">Crop random image</string>

    <string name="format_crop_result_d_d">Crop Result (%1$dx%2$d)</string>
    <string name="format_quality_d">Quality: %d</string>

    <string name="permission_title_rationale">Permission needed</string>
    <string name="permission_read_storage_rationale">Storage read permission is needed to pick files.</string>
    <string name="permission_write_storage_rationale">Storage write permission is needed to save the image.</string>

    <string name="toast_cannot_retrieve_selected_image">Cannot retrieve selected image</string>
    <string name="toast_cannot_retrieve_cropped_image">Cannot retrieve cropped image</string>
    <string name="toast_unexpected_error">Unexpected error</string>
    <string name="hint_signature">不超过100字符</string>
    <string name="title_activity_test">SimpleTest</string>
    <string name="scan">扫一扫</string>
    <string name="share">分享</string>
    <string name="on">on</string>
    <string name="off">off</string>
    <string name="city_query_hint">输入城市名或首字母查询</string>
    <string name="dialogCancel">取消</string>
    <string name="action_sign_in">Sign in</string>
    <string name="button_extract">Extract</string>
    <string name="button_share">Share</string>
    <string name="dialog_saved_description">\"%1$s\"程序文件已保存至 \"com.mwm.loyal\share\" 文件夹下，文件名是: %2$s</string>
    <string name="dialog_extract_fail">提取失败</string>
    <string name="dialog_extract_fail_description">提取APK文件失败，请重启之后再试.</string>
    <string name="send_to">Send \"%s\" using</string>
    <string name="skip">跳过丨%1$ds</string>
    <string name="destroy_account">注销账户</string>
    <string name="destroy_tips">温馨提示</string>
    <string name="destroy_message">请您确认是否注销“%1$s”？</string>
</resources>