<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/ic_menu_camera"
            android:title="Camera" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="Gallery" />

    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_voice"
                android:icon="@drawable/ic_menu_voice"
                android:title="@string/action_voice" />
            <item
                android:id="@+id/nav_scan"
                android:icon="@drawable/ic_menu_scan"
                android:title="@string/scan" />
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_menu_settings"
                android:title="@string/action_settings" />
        </menu>
    </item>
</menu>
