<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="click"
            type="com.mwm.loyal.handler.AccountSafetyHandler" />

        <variable
            name="drawable"
            type="android.graphics.drawable.Drawable" />
    </data>

    <android.support.v7.widget.LinearLayoutCompat
        style="@style/baseActStyle"
        android:background="@{drawable}"
        tools:context=".activity.AccountSafetyActivity">

        <include layout="@layout/toolbar" />

        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/drawable_login_input"
            android:orientation="vertical"
            android:padding="8dp"
            app:divider="@drawable/shape_line_grey"
            app:showDividers="middle">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/itemAboutText"
                    android:drawableEnd="@null"
                    android:text="@string/device_lock" />

                <ImageView
                    android:id="@+id/account_device_lock"
                    android:layout_width="50dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center_vertical|end"
                    android:contentDescription="@string/off"
                    android:onClick="@{click::onClick}"
                    android:src="@mipmap/switch_off" />
            </FrameLayout>

            <TextView
                android:id="@+id/account_mm_reset"
                style="@style/itemAboutText"
                android:onClick="@{click::onClick}"
                android:text="@string/reset_mm" />

            <TextView
                android:id="@+id/account_destroy"
                style="@style/itemAboutText"
                android:onClick="@{click::onClick}"
                android:text="@string/destroy_account" />
        </android.support.v7.widget.LinearLayoutCompat>
    </android.support.v7.widget.LinearLayoutCompat>
</layout>