<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="observableAccountBean"
            type="com.mwm.loyal.beans.ObservableAccountBean" />

        <variable
            name="click"
            type="com.mwm.loyal.handler.LoginHandler" />

        <variable
            name="drawable"
            type="android.graphics.drawable.Drawable" />
    </data>

    <RelativeLayout
        style="@style/baseActStyle"
        android:background="@{drawable}">

        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@color/trans"
            android:orientation="vertical"
            android:padding="8dp">

            <android.support.v7.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/drawable_login_input"
                android:orientation="vertical"
                android:padding="8dp"
                app:divider="@drawable/shape_line_grey"
                app:showDividers="middle">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/account_clear"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="10dp"
                        android:contentDescription="@string/empty"
                        android:onClick="@{click::onClick}"
                        android:src="@mipmap/edit_clear"
                        android:visibility="gone" />

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/account"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true"
                        android:layout_toStartOf="@id/account_clear"
                        android:background="@color/white"
                        android:digits="@string/digits"
                        android:hint="@string/hint_yhmc"
                        android:inputType="textEmailAddress"
                        android:maxLength="16"
                        android:padding="10dp"
                        android:text="@{observableAccountBean.account}"
                        android:textColor="@color/black"
                        android:textColorHint="@color/grey"
                        android:textSize="@dimen/text_sp_18" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.v7.widget.AppCompatImageView
                        android:id="@+id/password_clear"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="10dp"
                        android:contentDescription="@string/empty"
                        android:onClick="@{click::onClick}"
                        android:src="@mipmap/edit_clear"
                        android:visibility="gone" />

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_toStartOf="@id/password_clear"
                        android:background="@color/white"
                        android:hint="@string/hint_yhmm"
                        android:inputType="textPassword"
                        android:maxLength="16"
                        android:padding="10dp"
                        android:text="@{observableAccountBean.password}"
                        android:textColor="@color/black"
                        android:textColorHint="@color/grey"
                        android:textSize="@dimen/text_sp_18" />
                </RelativeLayout>

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/serverView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:completionThreshold="1"
                    android:hint="@string/hint_server"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:padding="10dp"
                    android:onClick="@{click::onClick}"
                    android:text="@{observableAccountBean.server}"
                    android:textColor="@color/black"
                    android:textColorHint="@color/grey"
                    android:textSize="@dimen/text_sp_18" />
            </android.support.v7.widget.LinearLayoutCompat>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:baselineAligned="false"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/forgetView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:onClick="@{click::onClick}"
                        android:padding="8dp"
                        android:text="@string/forget_mm"
                        android:textColor="@color/color_text_click"
                        android:textSize="@dimen/text_sp_18" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/registerView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:onClick="@{click::onClick}"
                        android:padding="8dp"
                        android:text="@string/register"
                        android:textColor="@color/color_text_click"
                        android:textSize="@dimen/text_sp_18" />
                </RelativeLayout>
            </LinearLayout>

            <TextView
                style="@style/buttonStyle"
                android:onClick="@{click::onClick}"
                android:text="@string/login" />
        </android.support.v7.widget.LinearLayoutCompat>
    </RelativeLayout>
</layout>
