<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="version"
            type="String" />

        <variable
            name="click"
            type="com.mwm.loyal.handler.AboutHandler" />

        <variable
            name="drawable"
            type="android.graphics.drawable.Drawable" />
    </data>

    <androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        style="@style/baseActStyle"
        android:background="@{drawable}"
        tools:context="activity.AboutActivity">

        <include layout="@layout/toolbar" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/empty"
            android:src="@mipmap/icon" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:padding="8dp"
            android:text="@{version}"
            android:textColor="@color/white"
            android:textSize="@dimen/text_sp_18" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/drawable_login_input"
            android:orientation="vertical"
            android:padding="8dp"
            app:divider="@drawable/shape_line_grey"
            app:showDividers="middle">

            <TextView
                android:id="@+id/about_version"
                style="@style/itemAboutText"
                android:onClick="@{click::onClick}"
                android:text="@string/ver" />

            <TextView
                android:id="@+id/about_feedBack"
                style="@style/itemAboutText"
                android:onClick="@{click::onClick}"
                android:text="@string/feedback" />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>
