<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="appBean"
            type="com.mwm.loyal.libs.manager.AppBean" />
    </data>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@color/white"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/item_appName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="70dp"
                android:ellipsize="end"
                android:fontFamily="sans-serif-thin"
                android:maxLines="1"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/item_package"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/item_appName"
                android:layout_marginStart="20dp"
                android:fontFamily="sans-serif-thin"
                android:textSize="14sp" />

            <ImageView
                android:id="@+id/imgIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/item_appName"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="20dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/empty"
                android:maxWidth="50dp"
                android:maxHeight="50dp" />

            <LinearLayout
                style="?android:attr/buttonBarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/item_package"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <Space
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/btnExtract"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:text="@string/button_extract"
                    android:textColor="@color/colorPrimary" />

                <Button
                    android:id="@+id/btnShare"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="12dp"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:text="@string/button_share"
                    android:textColor="@color/colorPrimary" />

                <Space
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>
</layout>