<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fresco="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <import type="android.text.TextUtils" />

        <variable
            name="observableAccountBean"
            type="com.mwm.loyal.beans.ObservableAccountBean" />

        <variable
            name="click"
            type="com.mwm.loyal.handler.PersonalHandler" />

        <variable
            name="drawable"
            type="android.graphics.drawable.Drawable" />
    </data>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        style="@style/baseActStyle"
        android:background="@{drawable}"
        tools:context=".activity.PersonalActivity">

        <include layout="@layout/toolbar" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/toolbar"
            android:background="@color/albumWhiteGray">

            <android.support.v7.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@color/white"
                android:orientation="vertical"
                android:padding="8dp"
                app:divider="@drawable/shape_line_grey"
                app:showDividers="middle">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:gravity="bottom"
                        android:orientation="horizontal"
                        android:paddingStart="8dp"
                        android:paddingLeft="8dp"
                        android:paddingTop="8dp"
                        android:paddingEnd="8dp"
                        android:paddingRight="8dp"
                        android:text="@string/account"
                        android:textColor="@color/text_personal"
                        android:textSize="@dimen/text_sp_18" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="top|end"
                        android:paddingStart="8dp"
                        android:paddingLeft="8dp"
                        android:paddingEnd="8dp"
                        android:paddingRight="8dp"
                        android:paddingBottom="8dp"
                        android:text="@{observableAccountBean.account}"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_sp_18" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:paddingStart="8dp"
                        android:paddingLeft="8dp"
                        android:paddingTop="8dp"
                        android:paddingEnd="8dp"
                        android:paddingRight="8dp"
                        android:text="@string/nickname"
                        android:textColor="@color/text_personal"
                        android:textSize="@dimen/text_sp_18" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:gravity="center_vertical|end"
                            android:paddingStart="8dp"
                            android:paddingLeft="8dp"
                            android:paddingEnd="8dp"
                            android:paddingRight="8dp"
                            android:paddingBottom="8dp"
                            android:text="@{TextUtils.isEmpty(observableAccountBean.nickname)?@string/key_default:observableAccountBean.nickname}"
                            android:textColor="@{TextUtils.isEmpty(observableAccountBean.nickname)?@color/text_personal:@color/black}"
                            android:textSize="@dimen/text_sp_18"
                            android:visibility="@{observableAccountBean.editable?View.GONE:View.VISIBLE}" />

                        <EditText
                            android:id="@+id/personal_nickname"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:background="@color/white"
                            android:gravity="center_vertical|end"
                            android:hint="@string/hint_nickname"
                            android:maxLength="18"
                            android:maxLines="1"
                            android:paddingStart="8dp"
                            android:paddingLeft="8dp"
                            android:paddingEnd="8dp"
                            android:paddingRight="8dp"
                            android:paddingBottom="8dp"
                            android:text="@{observableAccountBean.nickname}"
                            android:textColor="@color/text_personal"
                            android:textSize="@dimen/text_sp_18"
                            android:visibility="@{observableAccountBean.editable?View.VISIBLE:View.GONE}" />
                    </RelativeLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:paddingStart="8dp"
                        android:paddingLeft="8dp"
                        android:paddingTop="8dp"
                        android:paddingEnd="8dp"
                        android:paddingRight="8dp"
                        android:text="@string/sign"
                        android:textColor="@color/text_personal"
                        android:textSize="@dimen/text_sp_18" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/white">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical|end"
                            android:paddingStart="8dp"
                            android:paddingLeft="8dp"
                            android:paddingEnd="8dp"
                            android:paddingRight="8dp"
                            android:paddingBottom="8dp"
                            android:text="@{TextUtils.isEmpty(observableAccountBean.signature)?@string/key_default:observableAccountBean.signature}"
                            android:textColor="@{TextUtils.isEmpty(observableAccountBean.signature)?@color/text_personal:@color/black}"
                            android:textSize="@dimen/text_sp_18"
                            android:visibility="@{observableAccountBean.editable?View.GONE:View.VISIBLE}" />

                        <EditText
                            android:id="@+id/personal_signature"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:background="@color/white"
                            android:gravity="center_vertical|end"
                            android:hint="@string/hint_signature"
                            android:maxLength="100"
                            android:paddingStart="8dp"
                            android:paddingLeft="8dp"
                            android:paddingEnd="8dp"
                            android:paddingRight="8dp"
                            android:paddingBottom="8dp"
                            android:text="@{observableAccountBean.signature}"
                            android:textColor="@color/text_personal"
                            android:textSize="@dimen/text_sp_18"
                            android:visibility="@{observableAccountBean.editable?View.VISIBLE:View.GONE}" />
                    </RelativeLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:paddingStart="8dp"
                        android:paddingLeft="8dp"
                        android:paddingTop="8dp"
                        android:paddingEnd="8dp"
                        android:paddingRight="8dp"
                        android:text="@string/qr"
                        android:textColor="@color/text_personal"
                        android:textSize="@dimen/text_sp_18" />

                    <RelativeLayout
                        android:id="@+id/view_person_qr"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:onClick="@{click::onClick}">

                        <ImageView
                            android:layout_width="32dp"
                            android:layout_height="32dp"
                            android:layout_alignParentEnd="true"
                            android:layout_centerVertical="true"
                            android:contentDescription="@string/empty"
                            android:src="@mipmap/qr_pressed" />
                    </RelativeLayout>
                </LinearLayout>
            </android.support.v7.widget.LinearLayoutCompat>

            <com.facebook.drawee.view.SimpleDraweeView
                android:id="@+id/simple_personal_icon"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="58dp"
                android:onClick="@{click::onClick}"
                fresco:actualImageScaleType="centerInside"
                fresco:roundAsCircle="true"
                fresco:roundingBorderColor="@color/white"
                fresco:roundingBorderWidth="2dp"
                fresco:viewAspectRatio="1" />
        </FrameLayout>
    </RelativeLayout>
</layout>
